[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "diskcache>=5.6.3",
    "opencv-python>=4.11.0.86",
    "pyclipper>=1.3.0.post6",
    "pillow>=12.0.0",
    "ruff>=0.14.8",
    "matplotlib",
    "open3d",
    "pyarrow>=22.0.0",
    "scikit-image>=0.26.0",
    "modelscope>=1.34.0",
    "trimesh>=4.11.1",
    "xformers>=0.0.33.post2",
    "opencv-contrib-python>=4.13.0.90",
]


# 定义可选的安装组
[project.optional-dependencies]
cpu = [
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0"
]  
gpu = [
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
]  

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = 'gpu' },
  { index = "pytorch-cpu", extra = 'cpu' }
]
torchvision = [
  { index = "pytorch-cu128", extra = 'gpu' },
  { index = "pytorch-cpu", extra = 'cpu' }
]
torchaudio = [
  { index = "pytorch-cu128", extra = 'gpu' },
  { index = "pytorch-cpu", extra = 'cpu' }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

#Windows x86 support
[tool.uv]
#required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]
